# mentor

./: .gitignore  .readthedocs.yaml  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.claude/: DESIGN.md  resume.sh  settings.json  settings.local.json
.github/workflows/: tests.yml
docs/: cli.md  conf.py  contributing.md  index.md  quickstart.md  requirements.txt
docs/api/: index.md  mentee.md  reporting.md
docs/examples/: cifar.md  index.md
examples/cifar/: train_cifar.py  train_cifar_classifier.py  train_cifar_resnet56.py
examples/resresnet/: res_ds.py
mentor/: __init__.py  mentee.py  reporting.py
src/mentor/: classification.py  datasets.py  evaluation.py  object_detection.py  restore.py
test/: test_mentor_evaluation.py
tests/: conftest.py  helpers.py
tests/checkpoint/: test_device.py  test_inference_state.py  test_roundtrip.py
tests/cli/: test_entrypoints.py
tests/integration/: test_resume.py  test_training_loop.py
tests/unit_testing/: test_freeze_unfreeze.py  test_mentee.py  test_reporting.py  test_select_layers.py  test_trainers.py
