[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    '^\s*def main_',
]

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes: undefined names, unused imports, etc.
    "I",   # isort: import order
    "UP",  # pyupgrade: modernise syntax for the target Python version
    "B",   # flake8-bugbear: likely bugs and design issues
]
ignore = [
    "E221", "E222",  # allow aligned assignments
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.5",
]
